[package]
name = "contact-manager"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
xdg = "2.4.1"
nanoid = "0.4.0"
vcard_parser = "0.2.1"
regex = "1.7.0"
execute = "0.2.11"
symlink = "0.1.0"
