[package]
name = "contact-manager"
version = "0.4.0"
edition = "2021"
authors = ["Louis-Marie Baer <lm@baermail.fr>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xdg = "2"
vcard_parser = "0.2.2"
uuid = { version = "1", features = ["v4", "fast-rng"] }
thiserror = "1"
clap = { version = "4", features = ["derive"], optional=true}

[features]
default = ["clap"]
clap = ["dep:clap"]
