[package]
name = "contact-manager-lib"
version = "0.5.2"
edition = "2021"
authors = ["Louis-Marie Baer <lm@baermail.fr>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xdg = "2"
vcard_parser = "0.2.2"
uuid = { version = "1", features = ["v4", "fast-rng"] }
thiserror = "1"
clap = { version = "4", default-features=false, features=["derive", "std"], optional=true}

[features]
default = []
clap = ["dep:clap"]
